Add and optimise some images

--- a/_posts/2018-10-07-certified-scrum-master.html
+++ b/_posts/2018-10-07-certified-scrum-master.html
@@ -6,8 +6,15 @@ categories:
 - Agile
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/badge-psmi.svg
 ---
-
+<figure>
+  <img src="/assets/images/posts/badge-psmi.svg" alt="" />
+  <figcaption>
+    <p class="figcaption">Professional Scrum Master (PSM I) certification. <i>Scrum.org.</i></p>
+  </figcaption>
+</figure>
 <p><img class="l" src="/assets/images/certifications/psmi.svg" alt="" width="70"> I just achieved my <a href="https://www.scrum.org/user/405331">Professional Scrum Master (PSM I) certification</a> at Scrum.org.</p>
 <p>I recommend it to everyone interested in helping teams create great products, and in gaining a better understanding of Scrum and the Scrum Master role. You might even bust some myths about Scrum.</p>
 <p>Thanks <a href="https://www.oneagency.se/">One Agency Sweden AB</a> for the awesome tips and support!</p>
