--- a/_posts/2019-05-25-mid-2019-reflections.html
+++ b/_posts/2019-05-25-mid-2019-reflections.html
@@ -8,8 +8,15 @@ categories:
 - Accessibility
 - Mindfulness
 - Music
+image:
+  path: /assets/images/social/mid_2019_reflections.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/mid_2019_reflections.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Photo by <a href="https://unsplash.com/@nickxshotz">Nicholas Green</a> on <a href="https://unsplash.com/">Unsplash</a>.</p>
+  </figcaption>
+</figure>
 <p>Music, people, culture, languages and communication have been my main interests for as long as I can remember. Growing up in a musical family where two of my sisters created a career as classical pianists, playing drums gave me a sense of purpose. So, my early adult years were spent on studying music at university level and working as freelance musician and drum teacher.</p>
 <p>At first it was fun and rewarding. But something was missing in my career trajectory. Editing audio and writing music with software filled that gap for a while, paving the way for another university, and a bigger career change. This time, my focus areas were information systems management, marketing, human-computer interaction, usability and accessibility. In 2002, I completed my Master's Degree in Economic Sciences, majoring in Information Systems Science.</p>
 <p>In music it's vital to actively listen and constantly interact with other people. And my Master's studies provided a solid foundation in higher-level information technology and human-computer interaction concepts. To combine these experiences and to put my newly acquired skills creatively to use in real life, while improving my language skills, I decided to move abroad in 2003.</p>
