--- a/_posts/2019-07-29-moving-to-malmo.html
+++ b/_posts/2019-07-29-moving-to-malmo.html
@@ -6,8 +6,15 @@ categories:
 - Malmo
 - Motivation
 - Sweden
+image:
+  path: /assets/images/social/moving_to_malmo.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/moving_to_malmo.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Photo by <a href="https://unsplash.com/@julianhochgesang">Julian Hochgesang</a> on <a href="https://unsplash.com/s/photos/%C3%B6resund">Unsplash</a></p>
+  </figcaption>
+</figure>
 <p>After having worked in Copenhagen for about eight years, I've decided to move to Sweden, to the opposite (east) side of the Öresund bridge. Those sunsets!</p>
 <p>Sweden is the sixth European country where I've lived and worked so far. Number is not important. What's important are all the cultural experiences and the diverse people I've met and learnt from during the years, widening my perspective. I'm grateful for that. However, I'm not willing to completely abandon my international career yet :) I will always remain open to new and exciting challenges.</p>
 <p>English will still (mostly) be my language of choice across all social media and the web. It's important to reach out to as many people as possible and not to alienate my international friends, ex-colleagues and new contacts. That said, I'll be working very hard to improve my Swedish, too.</p>
