--- a/_posts/2020-12-31-2020-the-year-from-hell.html
+++ b/_posts/2020-12-31-2020-the-year-from-hell.html
@@ -7,8 +7,15 @@ categories:
 - General
 - Malmo
 - Sweden
+image:
+  path: /assets/images/social/2020_the_year_from_hell.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/2020_the_year_from_hell.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by Aki Kärkkäinen.</i></p>
+  </figcaption>
+</figure>
 <p><strong>2020</strong>. The year from hell, entirely of our own making (we humans). I've spent most of this lonely pandemic year reading, listening and trying to understand people's behaviour better, including people whose opinions, beliefs and actions are the polar opposite of mine. 2020 was also a wake-up call and an opportunity to try to update and reprogram my System 1.</p>
 <p>My perception of several countries has changed profoundly in 2020—including a certain Scandinavian country whose arrogant "we know best" attitude has resulted in not only suffering and unnecessary deaths, but also its international reputation being damaged for years, and perhaps even decades to come.</p>
 <p>The coronavirus has exposed not only worst weaknesses, arrogance and ignorance in some Western countries, but also—at least in Sweden—lack of crisis leadership in the form of mixed messages, anti-science thinking, not leading by example, downplaying COVID-19 as well as authorities and politicians avoiding responsibility. It's interesting to note that many (most?) of the best leaders across the globe in 2020 have been female, including in Northern Europe.</p>
