--- a/_posts/2021-03-12-fifty-years.html
+++ b/_posts/2021-03-12-fifty-years.html
@@ -6,7 +6,15 @@ categories:
 - Motivation
 - General
 - Sweden
+image:
+  path: /assets/images/social/fifty_years.jpg
 ---
+<figure>
+    <img src="/assets/images/posts/fifty_years.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption">Some snapshots of my life so far.</p>
+    </figcaption>
+  </figure>
 
 <p>Today is my birthday. I'm fifty years old. Before the coronavirus pandemic, I had the wildest dreams on how to spend this day, such as trekking in the high Himalayas or exploring Hokkaido in Japan (to name a few). Instead, we're in the woods in Sweden, which is more sustainable, and not so bad either. The Himalayas can wait.</p>
 <p>For someone who has always had many interests in life, it's interesting to reflect back on my (roughly) seven-year cycles of change. After the childhood/teenage years of drawing, skiing and listening to my sisters’ piano playing, I spent the next 14 years as a music student and then as a freelance musician and a drum teacher. The next 14 years I spent digging into art, design and technology, working mostly as a developer.</p>
