--- a/_posts/2021-11-01-the-new-normal.html
+++ b/_posts/2021-11-01-the-new-normal.html
@@ -7,8 +7,15 @@ categories:
 - Malmo
 - Sweden
 - Teams
+image:
+  path: /assets/images/social/the_new_normal.jpg
 ---
-
+<figure>
+  <img src="/assets/images/posts/the_new_normal.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Photo by <a href="https://unsplash.com/es/@gabiontheroad">Gabriella Clare Marino</a> on <a href="https://unsplash.com/s/photos/covid19">Unsplash</a></p>
+  </figcaption>
+</figure>
 <p>Today was my first day at the office in 19 months! It was a surreal experience in so many ways. I love my team, so it was really great to see them after so long time. Some of them I'd actually never met IRL, despite having worked with them daily all this time, just remote. It has worked so well because they're great people, as confirmed today! :) In some ways, 1.5 years just disappeared today, between then and now.</p>
 <p>But on the other hand, that's exactly where the problem lies. We can't just pretend that nothing happened between now and then, and go back to how things were back then (we're in the middle of a global pandemic, remember?). That would be ignoring the current reality in the world, not learning, and undermining all the people who have suffered so much during this pandemic. The catastrophic failure of the Swedish pandemic response is documented in the Corona Commission's recent report that came out on 29 October 2021 (final report due in Feb 2022). (I have a lot more to say about this, but that'll have to be another post.)</p>
 <p>It's much easier to fall back on old habits than actually change them.</p>
