--- a/_posts/2021-07-13-certified-scrum-product-owner.html
+++ b/_posts/2021-07-13-certified-scrum-product-owner.html
@@ -6,8 +6,15 @@ categories:
 - Agile
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/badge-pspoi.svg
 ---
-
+<figure>
+  <img src="/assets/images/posts/badge-pspoi.svg" alt="" />
+  <figcaption>
+    <p class="figcaption">Professional Scrum Product Owner (PSPO I) certification. <i>Scrum.org.</i></p>
+  </figcaption>
+</figure>
 <p><img class="l" src="/assets/images/certifications/pspoi.svg" alt="" width="70"> I've been interested in <strong>value</strong> for as long as I remember: the "why", what it is, how to build and deliver it effectively, and how to measure it. Now I've completed one more stepping stone on my agile journey by acquiring the <a href="https://www.scrum.org/user/405331">Professional Scrum Product Owner (PSPO I) certification</a> at Scrum.org.</p>
 <p>During my years of working in six European countries, I've examined value from different angles and roles, keeping my eyes on the big picture. I've not only seen the "Product Management Vacuum" unfold in some product companies, but also worked with some great Product Owners and Product Managers that have filled that vacuum with vision, strategy, and passion. I've learned a lot from them, realizing that Product Management is a career, while Product Ownership is an accountability in Scrum. Anyone working as Product Owner needs to dig deeper in the product/customer, outside the Scrum framework, and step into the realm of product management to be successful.</p>
 <p>Thanks <a href="https://www.oneagency.se/">One Agency Sweden AB</a> and all my dear colleagues for enabling me to validate my knowledge also from the Product Owner perspective. The journey continues. Scrum on!</p>
