--- a/_posts/2022-07-11-death-to-dependencies.html
+++ b/_posts/2022-07-11-death-to-dependencies.html
@@ -6,12 +6,13 @@ categories:
 - Agile
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/death_to_dependencies.png
 ---
 <figure>
-  <img src="/assets/images/posts/Dependencies_Jim_Benson.png" alt="" />
+  <img src="/assets/images/posts/death_to_dependencies.png" alt="" />
   <figcaption>
-    <p class="figcaption">
-      Death to Dependencies - Jim Benson 
+    <p class="figcaption">Death to Dependencies - Jim Benson</p>
   </figcaption>
 </figure>
 
