Add and use imgpath var

--- a/_posts/2017-07-31-punta-gnifetti-signalkuppe-summit.html
+++ b/_posts/2017-07-31-punta-gnifetti-signalkuppe-summit.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/4000m_punta_gnifetti_31072017.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_1.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_gnifetti_31072017_1.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Capanna Regina Margherita (4554m) on July 31, 2017—the highest building and mountain hut in Europe. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -22,28 +22,28 @@ image:
 <p>On the summit sits the Capanna Regina Margherita, the highest mountain hut in Europe. I’m so grateful to have been able to do this. Mountains—and nature—are so awesome and great for body, mind and soul!</p>
 
 <figure>
-  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_2.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_gnifetti_31072017_2.jpg" alt="" />
   <figcaption>
     <p class="figcaption">View from Capanna Regina Margherita and Punta Gnifetti (Signalkuppe, 4554m) on July 31, 2017—the sixth highest Alpine summit, according to the official UIAA list of the <a href="https://theuiaa.org/mountaineering/mountain-classification/">82 Alpine summits higher than 4000 metres</a>. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_5.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_gnifetti_31072017_5.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Beautiful morning on the Lys Glacier, on July 31, 2017. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_4.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_gnifetti_31072017_4.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Going up on the Lys Glacier—next to some impressive crevasses—on July 31, 2017. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
 
 <figure>
-  <img src="/assets/images/posts/4000m_punta_gnifetti_31072017_3.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_gnifetti_31072017_3.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Coming down from Punta Gnifetti (Signalkuppe) on the Lys Glacier, with lots of deep crevasses along the way. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
