--- a/_posts/2018-08-18-castore-summit.html
+++ b/_posts/2018-08-18-castore-summit.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/4000m_castore_18082018.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/4000m_castore_18082018_1.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_castore_18082018_1.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Castore south-east ridge, ca. 4200m altitude, early morning on August 18, 2018. The summit is visible in the distance. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -31,7 +31,7 @@ image:
 </figure>
 
 <figure>
-  <img src="/assets/images/posts/4000m_castore_18082018_2.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_castore_18082018_2.jpg" alt="" />
   <figcaption>
     <p class="figcaption">View towards south-east right when we started descending from the Castore summit (4223m), on August 18, 2018. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
