--- a/_posts/2019-05-25-mid-2019-reflections.html
+++ b/_posts/2019-05-25-mid-2019-reflections.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/mid_2019_reflections.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/mid_2019_reflections.jpg" alt="" />
+  <img src="{{site.imgpath}}/mid_2019_reflections.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Photo by <a href="https://unsplash.com/@nickxshotz">Nicholas Green</a> on <a href="https://unsplash.com/">Unsplash</a>.</p>
   </figcaption>
