--- a/_posts/2019-07-29-moving-to-malmo.html
+++ b/_posts/2019-07-29-moving-to-malmo.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/moving_to_malmo.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/moving_to_malmo.jpg" alt="" />
+  <img src="{{site.imgpath}}/moving_to_malmo.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Photo by <a href="https://unsplash.com/@julianhochgesang">Julian Hochgesang</a> on <a href="https://unsplash.com/s/photos/%C3%B6resund">Unsplash</a></p>
   </figcaption>
