--- a/_posts/2021-03-12-fifty-years.html
+++ b/_posts/2021-03-12-fifty-years.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/fifty_years.jpg
 ---
 <figure>
-    <img src="/assets/images/posts/fifty_years.jpg" alt="" />
+    <img src="{{site.imgpath}}/fifty_years.jpg" alt="" />
     <figcaption>
       <p class="figcaption">Some snapshots of my life so far.</p>
     </figcaption>
