--- a/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
+++ b/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/places_jyvaskyla.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_jyvaskyla_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_jyvaskyla_1000w.jpg" alt="" />
   <figcaption>
       <p class="figcaption">My father, brushing the snow off the yard in Jyväskylä (Christmas 2008). <i>Photo by Aki Kärkkäinen.</i></p>
     </figcaption>
