--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/places_helsinki.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_helsinki_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_helsinki_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Helsinki (2005). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
