--- a/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
+++ b/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/places_chamonix.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_chamonix_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_chamonix_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">A view towards south-east from l'Aiguille du Midi (3842m) in March 2006, showing Vallée Blanche and Glacier du Géant, merging into Mer de Glace in the east (to the left, outside this photo). <i>Photo by Aki Kärkkäinen</i>.</p>
   </figcaption>
