--- a/_posts/2021-04-26-places-where-I-have-lived-part-6-paris.html
+++ b/_posts/2021-04-26-places-where-I-have-lived-part-6-paris.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/places_paris.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_paris_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_paris_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Centre Pompidou, Paris (2006). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
