--- a/_posts/2021-04-30-places-where-I-have-lived-part-8-copenhagen.html
+++ b/_posts/2021-04-30-places-where-I-have-lived-part-8-copenhagen.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/places_copenhagen.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_copenhagen_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_copenhagen_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Frederik's Church & Amalienborg Palace, Copenhagen (2009). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
