--- a/_posts/2021-07-13-certified-scrum-product-owner.html
+++ b/_posts/2021-07-13-certified-scrum-product-owner.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/badge-pspoi.svg
 ---
 <figure>
-  <img src="/assets/images/posts/badge-pspoi.svg" alt="" />
+  <img src="{{site.imgpath}}/badge-pspoi.svg" alt="" />
   <figcaption>
     <p class="figcaption">Professional Scrum Product Owner (PSPO I) certification. <i>Scrum.org.</i></p>
   </figcaption>
