--- a/_posts/2021-11-01-the-new-normal.html
+++ b/_posts/2021-11-01-the-new-normal.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/the_new_normal.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/the_new_normal.jpg" alt="" />
+  <img src="{{site.imgpath}}/the_new_normal.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Photo by <a href="https://unsplash.com/es/@gabiontheroad">Gabriella Clare Marino</a> on <a href="https://unsplash.com/s/photos/covid19">Unsplash</a></p>
   </figcaption>
