--- a/_posts/2021-12-31-2021-the-prolonged-pandemic.html
+++ b/_posts/2021-12-31-2021-the-prolonged-pandemic.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/reflections_2021.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/reflections_2021.jpg" alt="" />
+  <img src="{{site.imgpath}}/reflections_2021.jpg" alt="" />
   <figcaption>
     <p class="figcaption">2021. <i>Photos by Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -36,7 +36,7 @@ image:
 <p>Hardly a successful strategy.</p>
 
 <figure>
-  <img src="/assets/images/posts/covid19_nordics_relative_to_population.png" alt="" />
+  <img src="{{site.imgpath}}/covid19_nordics_relative_to_population.png" alt="" />
   <figcaption>
     <p class="figcaption">Cumulative confirmed COVID-19 deaths per million people in the Nordics in 2020–⁠⁠21, relative to population. <i>Source: <a href="https://ourworldindata.org/covid-deaths">https://ourworldindata.org/covid-deaths</a></i></p>
   </figcaption>
