--- a/_posts/2022-03-22-what-is-an-expert.html
+++ b/_posts/2022-03-22-what-is-an-expert.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/being_an_expert.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/being_an_expert.jpg" alt="" />
+  <img src="{{site.imgpath}}/being_an_expert.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Photo by <i><a href="https://unsplash.com/@californong">Nong V</a></i> on <a href="https://unsplash.com/s/photos/focus">Unsplash</a></p>
   </figcaption>
