--- a/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
+++ b/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/alistair_cockburn_skatteverket.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/alistair_cockburn_skatteverket.jpg" alt="" />
+  <img src="{{site.imgpath}}/alistair_cockburn_skatteverket.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Alistair Cockburn talking about the Heart of Agile, before facilitating his Elephant Carpaccio exercise at Skatteverket, June 15, 2022. Photo by <i>Aki Kärkkäinen.</i></p>
   </figcaption>
