--- a/_posts/2022-06-30-last-day-at-skatteverket.html
+++ b/_posts/2022-06-30-last-day-at-skatteverket.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/skatteverket_last_day.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/skatteverket_1.jpg" alt="" />
+  <img src="{{site.imgpath}}/skatteverket_1.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Skatteverket, June 30, 2022. Photo by <i>Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -24,7 +24,7 @@ image:
 <p>Special thanks to everyone in my team that I had the pleasure of working with between 2019-2022: Fredde Kullberg, Tibor Lundberg, Andreas Tilly, Andreas Åberg, Amir Mujezinovic, Hassan Ftouni, Sofia Dahlgren, Oscar Linde, Erik Granbom, Nguyen Lam, Geir V. Hagen, Linda Lundin Makungu, Daniel Sperling, Isabell Garsten Schön, Elin Kornehed, Hawoay Tao, Inger M Larsson and Nicolas Luco Martinez. I leave the team in good health, and in the capable hands of my colleague and successor Hassan Ftouni :)</p>
 
 <figure>
-  <img src="/assets/images/posts/skatteverket_2.jpg" alt="" />
+  <img src="{{site.imgpath}}/skatteverket_2.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Members of my team at Skatteverket, June 29, 2022. Left to right: me, Fredde (Fredrik) Kullberg, Amir Mujezinovic, Hassan Ftouni, Tibor Lundberg, Andreas Tilly. Photo by <i>Aki Kärkkäinen.</i></p>
   </figcaption>
