--- a/_posts/2022-07-11-death-to-dependencies.html
+++ b/_posts/2022-07-11-death-to-dependencies.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/death_to_dependencies.png
 ---
 <figure>
-  <img src="/assets/images/posts/death_to_dependencies.png" alt="" />
+  <img src="{{site.imgpath}}/death_to_dependencies.png" alt="" />
   <figcaption>
     <p class="figcaption">Death to Dependencies - Jim Benson</p>
   </figcaption>
