--- a/_posts/2022-07-12-effective-teams-and-leadership.html
+++ b/_posts/2022-07-12-effective-teams-and-leadership.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/team_books.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/team_books.jpg" alt="" />
+  <img src="{{site.imgpath}}/team_books.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Some of my favourite books on effective teams and leadership.</p>
   </figcaption>
