--- a/_posts/2022-07-15-scrum-or-kanban-a-false-equivalence.html
+++ b/_posts/2022-07-15-scrum-or-kanban-a-false-equivalence.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/scrum_or_kanban.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/scrum_or_kanban.jpg" alt="" />
+  <img src="{{site.imgpath}}/scrum_or_kanban.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@bernardhermant">Bernard Hermant</a> on <a href="https://unsplash.com/s/photos/architecture-abstract">Unsplash</a></i></p>
   </figcaption>
