--- a/_posts/2022-08-29-on-business-agility.html
+++ b/_posts/2022-08-29-on-business-agility.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/the_6_enablers_of_business_agility.png
 ---
 <figure>
-  <img src="/assets/images/posts/the_6_enablers_of_business_agility.png" alt="" />
+  <img src="{{site.imgpath}}/the_6_enablers_of_business_agility.png" alt="" />
   <figcaption>
     <p class="figcaption">Karim Harbott's <i>The 6 Enablers of Business Agility</i></p>
   </figcaption>
@@ -51,7 +51,7 @@ image:
 <h2 id="business_agility_books">Some other books on Business Agility</h2>
 
 <figure>
-  <img src="/assets/images/posts/business_agility_books.jpg" alt="" />
+  <img src="{{site.imgpath}}/business_agility_books.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Some of my favourite books related to business agility.</i></p>
   </figcaption>
