--- a/_posts/2022-08-31-scaling-scrum.html
+++ b/_posts/2022-08-31-scaling-scrum.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/less_framework.png
 ---
 <figure>
-  <img src="/assets/images/posts/less_framework.png" alt="" />
+  <img src="{{site.imgpath}}/less_framework.png" alt="" />
   <figcaption>
     <p class="figcaption">
       <i>LeSS Framework</i>
