--- a/_posts/2022-09-02-naming-things.html
+++ b/_posts/2022-09-02-naming-things.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/naming_things.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/naming_things.jpg" alt="" />
+  <img src="{{site.imgpath}}/naming_things.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@cristina_gottardi">Cristina Gottardi</a> on <a href="https://unsplash.com/s/photos/culture">Unsplash</a></i></p>
   </figcaption>
