--- a/_posts/2022-09-05-stand-with-ukraine.html
+++ b/_posts/2022-09-05-stand-with-ukraine.html
@@ -9,7 +9,7 @@ image:
   path: /assets/images/social/nasa_earth.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/nasa_earth.jpg" alt="" />
+  <img src="{{site.imgpath}}/nasa_earth.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@nasa">NASA</a> on <a href="https://unsplash.com/s/photos/nasa">Unsplash</a></i></p>
   </figcaption>
