--- a/_posts/2022-09-09-courage-to-change.html
+++ b/_posts/2022-09-09-courage-to-change.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/courage_to_change.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/courage_to_change.jpg" alt="" />
+  <img src="{{site.imgpath}}/courage_to_change.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@okta">Tania Malréchauffé</a> on <a href="https://unsplash.com/s/photos/climate-change">Unsplash</a></i></p>
   </figcaption>
