--- a/_posts/2022-09-12-new-job.html
+++ b/_posts/2022-09-12-new-job.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/trygg_hansa.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/trygg_hansa.jpg" alt="" />
+  <img src="{{site.imgpath}}/trygg_hansa.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo on <a href="https://www.mynewsdesk.com/se/trygg-hansa/images?q=Livboj">Trygg-Hansa Media Archive</a></i></p>
   </figcaption>
