--- a/_posts/2022-12-30-2022-when-the-masks-fell-off.html
+++ b/_posts/2022-12-30-2022-when-the-masks-fell-off.html
@@ -15,7 +15,7 @@ image:
   path: /assets/images/social/2022_when_the_masks_fell_off.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/2022_when_the_masks_fell_off.jpg" alt="" />
+  <img src="{{site.imgpath}}/2022_when_the_masks_fell_off.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@allewollenalex">Alexander Kagan</a> on <a href="https://unsplash.com/photos/rkji9hajIeM">Unsplash</a></i></p>
   </figcaption>
@@ -60,7 +60,7 @@ image:
 <p>If behaving as if the COVID-19 pandemic is over is irresponsible and egoistic, how about the climate crisis then? What can I say? Another wasted year. It’s too late to “hope” that the climate crisis will somehow magically be solved. To “hope” means placing responsibility outside ourselves, be powerless, be a victim. We need to act instead, take responsibility, create pressure on the governments and politicians, and create new habits that help us focus on solving this crisis—even when we don’t feel like doing so.</p>
 
 <figure>
-  <img src="/assets/images/posts/no_planet_b.jpg" alt="" />
+  <img src="{{site.imgpath}}/no_planet_b.jpg" alt="" />
   <figcaption>
     <p class="figcaption">There is no Planet B. <i>Photo by <a href="https://unsplash.com/fr/@li_anlim">Li-An Lim</a> on <a href="https://unsplash.com/photos/ycW4YxhrWHM">Unsplash</a></i></p>
   </figcaption>
@@ -94,7 +94,7 @@ image:
 <p>Many people are suffering from an attention crisis, triggered by social media and surveillance capitalism. I’ve certainly become aware of my own shortened attention span. This realisation motivated me to read more books than ever before. I wanted to restore my focus with the help of deep work, mindfulness meditation, and new habits. One of my new habits since the pandemic started is to walk at least eight kilometres every day, often combined with mindfulness. I’ve applied many new ideas I got from the books (or from walks) in my work with my teams.</p>
 
 <figure>
-  <img src="/assets/images/posts/2022_books.png" alt="" />
+  <img src="{{site.imgpath}}/2022_books.png" alt="" />
   <figcaption>
     <p class="figcaption">The books I read in 2022. <i>See <a href="https://www.goodreads.com/user_challenges/32230931">my 2022 reading challenge on Goodreads</a>.</i></p>
   </figcaption>
