--- a/_posts/2023-04-04-finland-joins-nato.html
+++ b/_posts/2023-04-04-finland-joins-nato.html
@@ -9,7 +9,7 @@ image:
   path: /assets/images/social/NATO_logo.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/NATO_logo.jpg" alt="" />
+  <img src="{{site.imgpath}}/NATO_logo.jpg" alt="" />
   <figcaption>
     <p class="figcaption">The official <a href="https://www.nato.int/"><abbr title="North Atlantic Treaty Organization">NATO</abbr></a> logo.</p>
   </figcaption>
@@ -20,7 +20,7 @@ image:
 <p>As human, I can’t match the mountain. As human, it’s harder to be neutral, especially when it comes to values. And as human, I feel pain when the Russian terrorist state continues its war and aggression against the West, still in 2023. Both my grandfathers fought in the war against the Soviet Union more than 80 years ago. Even as a small child, I saw what the war did to them. And today, our enemy is still the same. Only this time, fascist Russia is threatening the West with nuclear weapons. I can only admire the Ukrainian spirit and resilience.</p>
 
 <figure>
-  <img src="/assets/images/posts/finland_joins_nato.jpg" alt="" />
+  <img src="{{site.imgpath}}/finland_joins_nato.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Celebrating Finland joining NATO on 4 April 2023, in the Italian Alps. A day to remember.</p>
   </figcaption>
