--- a/_posts/2023-06-20-agile-habits.html
+++ b/_posts/2023-06-20-agile-habits.html
@@ -13,7 +13,7 @@ image:
   path: /assets/images/social/agile_habits.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/agile_habits.jpg" alt="" />
+  <img src="{{site.imgpath}}/agile_habits.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@emmaou">Emma Ou</a> on <a href="https://unsplash.com/photos/0hkx30AxzKs">Unsplash</a></i></p>
   </figcaption>
@@ -27,7 +27,7 @@ image:
 <p>As Charles Duhigg explains in his book <a href="https://www.amazon.com/Power-Habit-What-Life-Business/dp/081298160X ">The Power of Habit</a>, the <strong>habit loop</strong> consists of three parts: <em>When I see [CUE], I will do [ROUTINE] in order to get a [REWARD]</em>. Cues are often related to location, time, emotional state, other people, or immediately preceding action. Routines can be anything physical, mental or emotional, ranging from simple to complex. Rewards can be food or emotional payoff, such as promotion, for example.</p> 
 
 <figure>
-  <img src="/assets/images/posts/habit_loop.jpg" alt="" />
+  <img src="{{site.imgpath}}/habit_loop.jpg" alt="" />
   <figcaption>
     <p class="figcaption">The three parts of the Habit Loop: a Cue, a Routine and a Reward. Image Credit: <a href="https://charlesduhigg.com/">Charles Duhigg</a>.</p>
   </figcaption>
@@ -63,7 +63,7 @@ image:
 </ul>
 
 <figure>
-  <img src="/assets/images/posts/habit_books.jpg" alt="" />
+  <img src="{{site.imgpath}}/habit_books.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Two great books: <i><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/1847941842">Atomic Habits</a> by James Clear, and <a href="https://www.amazon.com/Power-Habit-What-Life-Business/dp/081298160X ">The Power of Habit</a> by Charles Duhigg.</i></p>
   </figcaption>
