--- a/_posts/2023-08-05-piramide-vincent-summit.html
+++ b/_posts/2023-08-05-piramide-vincent-summit.html
@@ -13,7 +13,7 @@ image:
 ---
 
 <figure>
-  <img src="/assets/images/posts/4000m_piramide_vincent_05082023_1.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_piramide_vincent_05082023_1.jpg" alt="" />
   <figcaption>
     <p class="figcaption">The summit of Piramide Vincent (4215m) on Aug 5, 2023, at 11:30. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -33,7 +33,7 @@ image:
 </figure>
 
 <figure>
-  <img src="/assets/images/posts/4000m_piramide_vincent_05082023_2.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_piramide_vincent_05082023_2.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Coming down from Piramide Vincent on Aug 5, 2023. Peaks from left to right: Corno Nero (4322m), Ludwigshohe (4342m), and Parrotspitze (4436m). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
