--- a/_posts/2023-08-28-agile-events-are-habits.html
+++ b/_posts/2023-08-28-agile-events-are-habits.html
@@ -13,7 +13,7 @@ image:
   path: /assets/images/social/agile_events_are_habits.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/agile_events_are_habits.jpg" alt="" />
+  <img src="{{site.imgpath}}/agile_events_are_habits.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@chuttersnap">CHUTTERSNAP</a> on <a href="https://unsplash.com/photos/qvT_629hapk">Unsplash</a></i></p>
   </figcaption>
