--- a/_posts/2017-03-20-punta-giordani-my-first-4000-metre-peak.html
+++ b/_posts/2017-03-20-punta-giordani-my-first-4000-metre-peak.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/4000m_punta_giordani_20032017.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/4000m_punta_giordani_20032017_1.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_giordani_20032017_1.jpg" alt="" />
   <figcaption>
     <p class="figcaption">On top of my first four-thousander, Punta Giordani (4046m), on March 20, 2017. A magnificent view towards north-west and Piramide Vincent (4215m). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
@@ -21,7 +21,7 @@ image:
 <p>On March 20, 2017 I went up with my climbing skins to <strong>my first four-thousander, Punta Giordani (4046m)</strong>, in the Monterosa massif in the Italian Alps. I have no words to describe the beauty of these mountains!</p>
 
 <figure>
-  <img src="/assets/images/posts/4000m_punta_giordani_20032017_2.jpg" alt="" />
+  <img src="{{site.imgpath}}/4000m_punta_giordani_20032017_2.jpg" alt="" />
   <figcaption>
     <p class="figcaption">View towards south-west from the top of Punta Giordani (4046m), on March 20, 2017. <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
