--- a/_posts/2018-10-07-certified-scrum-master.html
+++ b/_posts/2018-10-07-certified-scrum-master.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/badge-psmi.svg
 ---
 <figure>
-  <img src="/assets/images/posts/badge-psmi.svg" alt="" />
+  <img src="{{site.imgpath}}/badge-psmi.svg" alt="" />
   <figcaption>
     <p class="figcaption">Professional Scrum Master (PSM I) certification. <i>Scrum.org.</i></p>
   </figcaption>
