--- a/_posts/2020-12-31-2020-the-year-from-hell.html
+++ b/_posts/2020-12-31-2020-the-year-from-hell.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/2020_the_year_from_hell.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/2020_the_year_from_hell.jpg" alt="" />
+  <img src="{{site.imgpath}}/2020_the_year_from_hell.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
