--- a/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
+++ b/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/places_gothenburg.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_gothenburg_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_gothenburg_1000w.jpg" alt="" />
   <figcaption>
       <p class="figcaption">Älvsborgsbron, Gothenburg (2007). <i>Photo by Aki Kärkkäinen.</i></p>
     </figcaption>
