--- a/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
+++ b/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
@@ -11,7 +11,7 @@ image:
   path: /assets/images/social/places_london.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_london_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_london_1000w.jpg" alt="" />
   <figcaption>
       <p class="figcaption">East End, London (2011). <i>Photo by Aki Kärkkäinen.</i></p>
     </figcaption>
