--- a/_posts/2021-04-28-places-where-I-have-lived-part-7-brussels.html
+++ b/_posts/2021-04-28-places-where-I-have-lived-part-7-brussels.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/places_brussels.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_brussels_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_brussels_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Saint-Josse, Brussels (2005). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
