--- a/_posts/2021-05-02-places-where-I-have-lived-part-9-malmo.html
+++ b/_posts/2021-05-02-places-where-I-have-lived-part-9-malmo.html
@@ -13,7 +13,7 @@ image:
   path: /assets/images/social/places_malmo.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/places_malmo_1000w.jpg" alt="" />
+  <img src="{{site.imgpath}}/places_malmo_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Turning Torso, Malmö (2008).<i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
