--- a/_posts/2022-08-19-beautiful-questions.html
+++ b/_posts/2022-08-19-beautiful-questions.html
@@ -12,7 +12,7 @@ image:
   path: /assets/images/social/books_on_questions.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/books_on_questions.jpg" alt="" />
+  <img src="{{site.imgpath}}/books_on_questions.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Warren Berger's books: A More Beautiful Question and The Book of Beautiful Questions.</i></p>
   </figcaption>
