--- a/_posts/2022-08-22-efficient-distributed-teams.html
+++ b/_posts/2022-08-22-efficient-distributed-teams.html
@@ -10,7 +10,7 @@ image:
   path: /assets/images/social/efficient_distributed_teams.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/efficient_distributed_teams.jpg" alt="" />
+  <img src="{{site.imgpath}}/efficient_distributed_teams.jpg" alt="" />
   <figcaption>
     <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@crisdinoto">Cris DiNoto</a> on <a href="https://unsplash.com/s/photos/graphic-art">Unsplash</a></i></p>
   </figcaption>
