Add images to a couple of older posts

--- a/_posts/2018-11-05-tips-for-a-sustainable-and-repeatable-accessibility-process.html
+++ b/_posts/2018-11-05-tips-for-a-sustainable-and-repeatable-accessibility-process.html
@@ -7,7 +7,15 @@ date_gmt: '2018-11-05 15:42:40 +0100'
 categories:
 - Webdev
 - Accessibility
+image:
+  path: /assets/images/social/accessibility_icon.svg
 ---
+<figure>
+  <img style="background:#fff;" src="{{site.imgpath}}/accessibility_icon.svg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>The accessibility icon, by <a href="https://accessibleicon.org/">The Accessible Icon Project </a>.</i></p>
+  </figcaption>
+</figure>
 <p>Have you ever had trouble using a digital product or service? Do you remember how it felt? Did you feel excluded, or just frustrated? In this introductory post I&rsquo;ll discuss some of the roadblocks to creating accessible products while offering practical advice on how to overcome them.</p>
 <h2>What is Web Accessibility?</h2>
 <p>Web accessibility is about putting people first. It&rsquo;s about digital equality and inclusion. It&rsquo;s about understanding the diversity of users and designing for the needs of the widest range of people &ndash; including (but not limited to) those with situational, temporary, changing or permanent disabilities. It&rsquo;s not about edge cases: designing for inclusion makes the design better for everyone. It&rsquo;s not about &ldquo;them&rdquo;, it&rsquo;s about us.</p>
