Add images to some posts

--- a/_posts/1999-03-10-ades.html
+++ b/_posts/1999-03-10-ades.html
@@ -11,7 +11,15 @@ categories:
 tags:
 - Music
 - Ad&egrave;s
+image:
+  path: /assets/images/social/thomas_adès.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/thomas_adès.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Adès conducting the National Youth Orchestra of Great Britain at Snape Maltings Concert Hall (2017). <i><a href="https://en.wikipedia.org/wiki/Thomas_Ad%C3%A8s">Wikipedia</a>.</i></p>
+  </figcaption>
+</figure>
 <p><em>Tiedonhankinnan menetelm&auml;t -kurssin lopputy&ouml;, maaliskuu 1999, Aki K&auml;rkk&auml;inen.</em> Sibelius-Akatemia.</p>
 <h3>Sis&auml;llysluettelo</h3>
 <ol>
