--- a/_posts/1999-09-19-siba.html
+++ b/_posts/1999-09-19-siba.html
@@ -9,6 +9,8 @@ categories:
 tags:
 - Music
 - Sibelius-Academy
+image:
+  path: /assets/images/social/sibelius_academy_logo.svg
 ---
 <ul class="sibNav">
 <li id="sibToc-0"><a title="Johdanto" href="#sib-ch-0">Johdanto</a></li>
