--- a/_posts/2002-06-12-thesis.html
+++ b/_posts/2002-06-12-thesis.html
@@ -13,6 +13,8 @@ tags:
 - interface
 - information
 - computer
+image:
+  path: /assets/images/social/spatial_sound_masters_thesis.png
 ---
 <p>Spatiaalinen &auml;&auml;ni k&auml;ytt&ouml;liittym&auml;ss&auml; piiloinformaation v&auml;litt&auml;j&auml;n&auml; ja visuaalisen kuorman kevent&auml;j&auml;n&auml;. <em>Tietoj&auml;rjestelm&auml;tieteen pro gradu--tutkielma, 12.6.2002, Aki K&auml;rkk&auml;inen.</em> Jyv&auml;skyl&auml;n yliopisto, Tietojenk&auml;sittelytieteiden laitos, Jyv&auml;skyl&auml;.</p>
 <h3>Sis&auml;llysluettelo</h3>
