--- a/_posts/2021-09-07-the-disrupted-workplace.html
+++ b/_posts/2021-09-07-the-disrupted-workplace.html
@@ -5,7 +5,14 @@ date: '2021-09-07 19:04:23 +0100'
 categories:
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/the_disrupted_workplace.jpg
 ---
-
+<figure>
+    <img src="/assets/images/posts/the_disrupted_workplace.jpg" alt="" />
+    <figcaption>
+      <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@translytranslations">Transly Translation Agency</a> on <a href="https://unsplash.com/photos/a-cat-sleeping-on-top-of-a-laptop-computer-J2jM8J63ZxU">Unsplash</a>.</i></p>
+    </figcaption>
+  </figure>
 <p>Technology is disruptive. If technology exists, and if it's proven useful - even making life easier sometimes - then that technology will be used. Those who wait are left behind.</p>
 <p>It's the same with the office. If people and teams are happier with a more flexible way of working, including working remotely (or partly at the office if they so prefer) while creating positive change and tangible outcomes, then this shift will disrupt the way we think about the office. This way of working will then emerge as the new norm, as we're beginning to see already. Those who wait are left behind.</p>
