--- a/_posts/2021-10-05-the-productivity-illusion.html
+++ b/_posts/2021-10-05-the-productivity-illusion.html
@@ -5,7 +5,17 @@ date: '2021-10-05 16:13:56 +0100'
 categories:
 - Motivation
 - Teams
+image:
+  path: /assets/images/social/the_productivity_illusion.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/the_productivity_illusion.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption"><i>Photo by <a href="https://unsplash.com/@randvmb">Randy Jacob</a> on <a href="https://unsplash.com/photos/mans-reflection-on-body-of-water-photography-A1HC8M5DCQc">Unsplash</a>.</i></p>
+  </figcaption>
+</figure>
+
+  
 
 <blockquote>
   <p>We have a unique opportunity to rethink how people can work rather than where they can (or should) work.</p>
