--- a/_posts/1999-03-10-ades.html
+++ b/_posts/1999-03-10-ades.html
@@ -12,10 +12,10 @@ tags:
 - Music
 - Ad&egrave;s
 image:
-  path: /assets/images/social/thomas_adès.jpg
+  path: /assets/images/social/thomas_ades.jpg
 ---
 <figure>
-  <img src="/assets/images/posts/thomas_adès.jpg" alt="" />
+  <img src="/assets/images/posts/thomas_ades.jpg" alt="" />
   <figcaption>
     <p class="figcaption">Adès conducting the National Youth Orchestra of Great Britain at Snape Maltings Concert Hall (2017). <i><a href="https://en.wikipedia.org/wiki/Thomas_Ad%C3%A8s">Wikipedia</a>.</i></p>
   </figcaption>
